修改turbine配置文件

--- a/deploy/turbine-server-dev.yml
+++ b/deploy/turbine-server-dev.yml
@@ -1,7 +1,7 @@
 # turbine 配置
 turbine:
   combine-host-port: true
-  app-config: '@zuul.server.id@',TEST-SERVER
+  app-config: ZUUL-SERVER,TEST-SERVER
   cluster-name-expression: new String("default")
   # turbine聚集数据的粒度
   aggregator:
